<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#FFFF00"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/drawer_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/drawer_spacer_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal"/>
        <Button
            android:id="@+id/vpl_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:background="#FF9800"
            android:text="@string/txt_vpl_btn"
            android:textSize="12sp"
            android:textColor="#000000"
            android:rotation="2"/>
        <LinearLayout
            android:id="@+id/drawer_spacer_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal"/>
        <Button
            android:id="@+id/ter_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:background="#FF9800"
            android:text="@string/txt_ter_btn"
            android:textSize="12sp"
            android:textColor="#000000"
            android:rotation="358"/>
        <LinearLayout
            android:id="@+id/drawer_spacer_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal"/>
        <Button
            android:id="@+id/bfp_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:background="#FF9800"
            android:text="@string/txt_bfp_btn"
            android:textSize="12sp"
            android:textColor="#000000"
            android:rotation="2"/>
        <LinearLayout
            android:id="@+id/drawer_spacer_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal"/>
        <Button
            android:id="@+id/now_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:background="#FF9800"
            android:text="@string/txt_now_btn"
            android:textSize="12sp"
            android:textColor="#000000"
            android:rotation="358"/>
        <LinearLayout
            android:id="@+id/drawer_spacer_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal"/>
        <Button
            android:id="@+id/call_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:background="#FF9800"
            android:text="@string/txt_call_btn"
            android:textSize="12sp"
            android:textColor="#000000"
            android:rotation="2"/>
        <LinearLayout
            android:id="@+id/drawer_spacer_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal"/>
        <Button
            android:id="@+id/ds_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:background="#FF9800"
            android:text="@string/txt_ds_btn"
            android:textSize="12sp"
            android:textColor="#000000"
            android:rotation="358"/>
        <LinearLayout
            android:id="@+id/drawer_spacer_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal"/>
        <LinearLayout
            android:id="@+id/drawer_spacer_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal"/>
        <LinearLayout
            android:id="@+id/drawer_spacer_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal"/>
    </LinearLayout>
</LinearLayout>
